Collect logs